--- a/public/style.css
+++ b/public/style.css
@@ -536,6 +536,28 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.btn-gradiant{
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: hsl(4, 100%, 67%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(4 100% 67% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #fbbf24 var(--tw-gradient-to-position);
+}
+
+.bg-gradient-to-r{
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-tomato{
+  --tw-gradient-from: hsl(4, 100%, 67%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(4 100% 67% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-amber-400{
+  --tw-gradient-to: #fbbf24 var(--tw-gradient-to-position);
+}
+
 .text-center{
   text-align: center;
 }
