--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,3 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-gradiant {
+    @apply bg-gradient-to-r from-tomato to-amber-400;
+  }
+}
