--- a/public/style.css
+++ b/public/style.css
@@ -536,37 +536,135 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.btn-gradiant{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-  --tw-gradient-from: hsl(4, 100%, 67%) var(--tw-gradient-from-position);
-  --tw-gradient-to: hsl(4 100% 67% / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  --tw-gradient-to: #fbbf24 var(--tw-gradient-to-position);
-}
-
-.bg-gradient-to-r{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.from-tomato{
-  --tw-gradient-from: hsl(4, 100%, 67%) var(--tw-gradient-from-position);
-  --tw-gradient-to: hsl(4 100% 67% / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-amber-400{
-  --tw-gradient-to: #fbbf24 var(--tw-gradient-to-position);
-}
-
-.text-center{
-  text-align: center;
-}
-
-.font-roboto{
+* {
   font-family: Roboto, sans-serif;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
+}
+
+.mr-auto{
+  margin-right: auto;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.block{
+  display: block;
+}
+
+.flex{
+  display: flex;
+}
+
+.w-full{
+  width: 100%;
+}
+
+.flex-col{
+  flex-direction: column;
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.bg-darkGrey{
+  --tw-bg-opacity: 1;
+  background-color: hsl(234 29% 20% / var(--tw-bg-opacity));
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.pb-9{
+  padding-bottom: 2.25rem;
+}
+
+.pl-4{
+  padding-left: 1rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.text-darkGrey{
+  --tw-text-opacity: 1;
+  color: hsl(234 29% 20% / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.ring-1{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-regularGrey{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: hsl(231 7% 60% / var(--tw-ring-opacity));
+}
+
+.focus\:outline-0:focus{
+  outline-width: 0px;
 }
