--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 @layer components {
-  .btn-gradiant {
-    @apply bg-gradient-to-r from-tomato to-amber-400;
+  * {
+    font-family: theme("fontFamily.roboto");
   }
 }
