--- a/public/style.css
+++ b/public/style.css
@@ -573,6 +573,18 @@ video {
   display: flex;
 }
 
+.hidden{
+  display: none;
+}
+
+.h-\[50\%\]{
+  height: 50%;
+}
+
+.h-full{
+  height: 100%;
+}
+
 .w-full{
   width: 100%;
 }
@@ -583,6 +595,10 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .justify-between{
@@ -608,6 +624,18 @@ video {
   padding: 2.5rem;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-3{
+  padding: 0.75rem;
+}
+
+.p-2\.5{
+  padding: 0.625rem;
+}
+
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -628,6 +656,10 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pr-3{
+  padding-right: 0.75rem;
 }
 
 .text-4xl{
@@ -665,6 +697,271 @@ video {
   --tw-ring-color: hsl(231 7% 60% / var(--tw-ring-opacity));
 }
 
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-100{
+  transition-duration: 100ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
+}
+
+.duration-700{
+  transition-duration: 700ms;
+}
+
+.duration-1000{
+  transition-duration: 1000ms;
+}
+
+.placeholder\:text-xs::-moz-placeholder{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.placeholder\:text-xs::placeholder{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.hover\:bg-tomato:hover{
+  --tw-bg-opacity: 1;
+  background-color: hsl(4 100% 67% / var(--tw-bg-opacity));
+}
+
+.hover\:from-tomato:hover{
+  --tw-gradient-from: hsl(4, 100%, 67%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(4 100% 67% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .focus\:outline-0:focus{
   outline-width: 0px;
+}
+
+@media (min-width: 1024px){
+  .lg\:mr-2{
+    margin-right: 0.5rem;
+  }
+
+  .lg\:mt-2{
+    margin-top: 0.5rem;
+  }
+
+  .lg\:mt-3{
+    margin-top: 0.75rem;
+  }
+
+  .lg\:mb-2{
+    margin-bottom: 0.5rem;
+  }
+
+  .lg\:mb-1{
+    margin-bottom: 0.25rem;
+  }
+
+  .lg\:block{
+    display: block;
+  }
+
+  .lg\:flex{
+    display: flex;
+  }
+
+  .lg\:hidden{
+    display: none;
+  }
+
+  .lg\:h-3{
+    height: 0.75rem;
+  }
+
+  .lg\:h-screen{
+    height: 100vh;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
+  .lg\:flex-row-reverse{
+    flex-direction: row-reverse;
+  }
+
+  .lg\:items-center{
+    align-items: center;
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
+  }
+
+  .lg\:space-y-1 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+  }
+
+  .lg\:space-y-1\.5 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
+  }
+
+  .lg\:rounded{
+    border-radius: 0.25rem;
+  }
+
+  .lg\:rounded-xl{
+    border-radius: 0.75rem;
+  }
+
+  .lg\:bg-darkGrey{
+    --tw-bg-opacity: 1;
+    background-color: hsl(234 29% 20% / var(--tw-bg-opacity));
+  }
+
+  .lg\:bg-white{
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .lg\:px-1{
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+
+  .lg\:py-1{
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .lg\:py-1\.5{
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+  }
+
+  .lg\:py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .lg\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:pb-2{
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:pr-0{
+    padding-right: 0px;
+  }
+
+  .lg\:pt-1{
+    padding-top: 0.25rem;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .lg\:text-xs{
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-\[\.5rem\]{
+    font-size: .5rem;
+  }
+
+  .lg\:text-\[0\.5rem\]{
+    font-size: 0.5rem;
+  }
+
+  .lg\:text-\[0\.75rem\]{
+    font-size: 0.75rem;
+  }
+
+  .lg\:text-\[0\.65rem\]{
+    font-size: 0.65rem;
+  }
+
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:shadow-md{
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .lg\:shadow-lg{
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .lg\:placeholder\:text-xs::-moz-placeholder{
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .lg\:placeholder\:text-xs::placeholder{
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .placeholder\:lg\:text-xs::-moz-placeholder{
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .placeholder\:lg\:text-xs::placeholder{
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .hover\:lg\:bg-tomato:hover{
+    --tw-bg-opacity: 1;
+    background-color: hsl(4 100% 67% / var(--tw-bg-opacity));
+  }
+
+  .hover\:lg\:bg-gradient-to-r:hover{
+    background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  }
+
+  .hover\:lg\:from-tomato:hover{
+    --tw-gradient-from: hsl(4, 100%, 67%) var(--tw-gradient-from-position);
+    --tw-gradient-to: hsl(4 100% 67% / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .hover\:lg\:to-amber-300:hover{
+    --tw-gradient-to: #fcd34d var(--tw-gradient-to-position);
+  }
 }
