--- a/public/style.css
+++ b/public/style.css
@@ -545,8 +545,22 @@ video {
   margin-right: auto;
 }
 
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-3\.5{
+  margin-top: 0.875rem;
+  margin-bottom: 0.875rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
 }
 
 .mr-4{
@@ -557,12 +571,20 @@ video {
   margin-right: auto;
 }
 
+.mt-16{
+  margin-top: 4rem;
+}
+
 .mt-3{
   margin-top: 0.75rem;
 }
 
 .mt-5{
   margin-top: 1.25rem;
+}
+
+.mt-56{
+  margin-top: 14rem;
 }
 
 .block{
@@ -624,16 +646,8 @@ video {
   padding: 2.5rem;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
-.p-3{
-  padding: 0.75rem;
-}
-
-.p-2\.5{
-  padding: 0.625rem;
+.p-8{
+  padding: 2rem;
 }
 
 .px-2{
@@ -654,17 +668,22 @@ video {
   padding-left: 1rem;
 }
 
-.pt-5{
-  padding-top: 1.25rem;
-}
-
 .pr-3{
   padding-right: 0.75rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm{
@@ -674,6 +693,10 @@ video {
 
 .font-bold{
   font-weight: 700;
+}
+
+.font-extrabold{
+  font-weight: 800;
 }
 
 .text-darkGrey{
@@ -703,41 +726,8 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-100{
-  transition-duration: 100ms;
-}
-
-.duration-500{
-  transition-duration: 500ms;
-}
-
-.duration-700{
-  transition-duration: 700ms;
-}
-
 .duration-1000{
   transition-duration: 1000ms;
-}
-
-.placeholder\:text-xs::-moz-placeholder{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.placeholder\:text-xs::placeholder{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.hover\:bg-tomato:hover{
-  --tw-bg-opacity: 1;
-  background-color: hsl(4 100% 67% / var(--tw-bg-opacity));
-}
-
-.hover\:from-tomato:hover{
-  --tw-gradient-from: hsl(4, 100%, 67%) var(--tw-gradient-from-position);
-  --tw-gradient-to: hsl(4 100% 67% / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .focus\:outline-0:focus{
@@ -745,24 +735,38 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:mr-2{
-    margin-right: 0.5rem;
-  }
-
-  .lg\:mt-2{
+  .lg\:my-2{
     margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 
-  .lg\:mt-3{
-    margin-top: 0.75rem;
+  .lg\:my-2\.5{
+    margin-top: 0.625rem;
+    margin-bottom: 0.625rem;
+  }
+
+  .lg\:mb-1{
+    margin-bottom: 0.25rem;
   }
 
   .lg\:mb-2{
     margin-bottom: 0.5rem;
   }
 
-  .lg\:mb-1{
-    margin-bottom: 0.25rem;
+  .lg\:mr-2{
+    margin-right: 0.5rem;
+  }
+
+  .lg\:mt-0{
+    margin-top: 0px;
+  }
+
+  .lg\:mt-3{
+    margin-top: 0.75rem;
+  }
+
+  .lg\:mb-3{
+    margin-bottom: 0.75rem;
   }
 
   .lg\:block{
@@ -787,6 +791,10 @@ video {
 
   .lg\:w-1\/2{
     width: 50%;
+  }
+
+  .lg\:w-1\/3{
+    width: 33.333333%;
   }
 
   .lg\:flex-row-reverse{
@@ -841,24 +849,14 @@ video {
     padding-bottom: 0.25rem;
   }
 
-  .lg\:py-1\.5{
-    padding-top: 0.375rem;
-    padding-bottom: 0.375rem;
-  }
-
-  .lg\:py-2{
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+  .lg\:py-24{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 
   .lg\:py-3{
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-  }
-
-  .lg\:py-0{
-    padding-top: 0px;
-    padding-bottom: 0px;
   }
 
   .lg\:pb-2{
@@ -873,9 +871,13 @@ video {
     padding-top: 0.25rem;
   }
 
-  .lg\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-\[0\.65rem\]{
+    font-size: 0.65rem;
   }
 
   .lg\:text-sm{
@@ -888,52 +890,10 @@ video {
     line-height: 1rem;
   }
 
-  .lg\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .lg\:text-\[\.5rem\]{
-    font-size: .5rem;
-  }
-
-  .lg\:text-\[0\.5rem\]{
-    font-size: 0.5rem;
-  }
-
-  .lg\:text-\[0\.75rem\]{
-    font-size: 0.75rem;
-  }
-
-  .lg\:text-\[0\.65rem\]{
-    font-size: 0.65rem;
-  }
-
-  .lg\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .lg\:shadow-md{
-    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
   .lg\:shadow-lg{
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
-  .lg\:placeholder\:text-xs::-moz-placeholder{
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
-
-  .lg\:placeholder\:text-xs::placeholder{
-    font-size: 0.75rem;
-    line-height: 1rem;
   }
 
   .placeholder\:lg\:text-xs::-moz-placeholder{
@@ -944,11 +904,6 @@ video {
   .placeholder\:lg\:text-xs::placeholder{
     font-size: 0.75rem;
     line-height: 1rem;
-  }
-
-  .hover\:lg\:bg-tomato:hover{
-    --tw-bg-opacity: 1;
-    background-color: hsl(4 100% 67% / var(--tw-bg-opacity));
   }
 
   .hover\:lg\:bg-gradient-to-r:hover{
