--- a/public/style.css
+++ b/public/style.css
@@ -540,6 +540,10 @@ video {
   font-family: Roboto, sans-serif;
 }
 
+.float-right{
+  float: right;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -642,6 +646,11 @@ video {
   background-color: hsl(234 29% 20% / var(--tw-bg-opacity));
 }
 
+.bg-rose-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 205 211 / var(--tw-bg-opacity));
+}
+
 .p-10{
   padding: 2.5rem;
 }
@@ -704,6 +713,16 @@ video {
   color: hsl(234 29% 20% / var(--tw-text-opacity));
 }
 
+.text-rose-500{
+  --tw-text-opacity: 1;
+  color: rgb(244 63 94 / var(--tw-text-opacity));
+}
+
+.text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -720,6 +739,16 @@ video {
   --tw-ring-color: hsl(231 7% 60% / var(--tw-ring-opacity));
 }
 
+.ring-rose-400{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(251 113 133 / var(--tw-ring-opacity));
+}
+
+.blur{
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition-all{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -730,8 +759,57 @@ video {
   transition-duration: 1000ms;
 }
 
+.placeholder\:text-rose-400::-moz-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(251 113 133 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-rose-400::placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(251 113 133 / var(--tw-text-opacity));
+}
+
 .focus\:outline-0:focus{
   outline-width: 0px;
+}
+
+.group:invalid .group-invalid\:bg-rose-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 205 211 / var(--tw-bg-opacity));
+}
+
+.group:invalid .group-invalid\:text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.group:invalid .group-invalid\:ring-1{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.group:invalid .group-invalid\:ring-rose-600{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(225 29 72 / var(--tw-ring-opacity));
+}
+
+.group:invalid .group-invalid\:placeholder\:hidden::-moz-placeholder{
+  display: none;
+}
+
+.group:invalid .group-invalid\:placeholder\:hidden::placeholder{
+  display: none;
+}
+
+.group:invalid .group-invalid\:placeholder\:text-rose-500::-moz-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(244 63 94 / var(--tw-text-opacity));
+}
+
+.group:invalid .group-invalid\:placeholder\:text-rose-500::placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(244 63 94 / var(--tw-text-opacity));
 }
 
 @media (min-width: 1024px){
@@ -753,6 +831,10 @@ video {
     margin-bottom: 0.5rem;
   }
 
+  .lg\:mb-3{
+    margin-bottom: 0.75rem;
+  }
+
   .lg\:mr-2{
     margin-right: 0.5rem;
   }
@@ -763,10 +845,6 @@ video {
 
   .lg\:mt-3{
     margin-top: 0.75rem;
-  }
-
-  .lg\:mb-3{
-    margin-bottom: 0.75rem;
   }
 
   .lg\:block{
